# gsi_im

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lamesource/: VbrTag.c  psymodel.c
app/src/main/res/layout/: activity_add.xml  activity_friend.xml  activity_main.xml  activity_msg.xml  activity_phone.xml  activity_send_msg.xml  activity_video.xml  fragment_find_group.xml  fragment_find_people.xml  item.xml  item_find.xml  item_friends.xml  item_main.xml  item_msg.xml  item_msg_left.xml  item_msg_right.xml  item_phone.xml  layout_header.xml
app/src/main/res/values/: strings.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/res/drawable/: bt_send_back.xml  green_spot.xml  red_spot.xml  (+2 more)
common/src/main/res/drawable-anydpi/: ic_action_box.xml  ic_action_face.xml  ic_action_local.xml  ic_action_more.xml  ic_action_photo.xml  ic_action_pic.xml  ic_action_user.xml  ic_action_warn.xml  ic_action_wheat.xml
core/: build.gradle
core/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
home/: build.gradle
home/src/main/: AndroidManifest.xml
home/src/main/debug/: AndroidManifest.xml
net/: build.gradle
net/src/main/: AndroidManifest.xml
storage/: build.gradle
storage/src/main/: AndroidManifest.xml
tmpmob/ShareSDK/assets/: ShareSDK.xml
usermodel/: build.gradle
usermodel/src/main/: AndroidManifest.xml
usermodel/src/main/debug/: AndroidManifest.xml
(+111 files in other folders)
